# edalize-plugins

./: pyproject.toml
src/edalize/: hal.py  slang.py
