[project]
name = "edalize-plugins"
description = "A selection of plugins for Edalize"
version = "0.1.0"
dependencies = ["edalize>=0.6.0"]

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["edalize", "edalize.*"]

[tool.black]
line-length = 88
experimental-string-processing = true

[project.scripts]
flist = "edalize.tools.flist:main"
